// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table editor plugins.renderNode calls next 1`] = `undefined`;

exports[`Table editor plugins.renderNode renders a Table when passed 1`] = `
<Table
  attributes={
    Object {
      "dummy": "dummyData",
    }
  }
  dummy="dummyData"
  node={
    Object {
      "data": Object {
        "get": [Function],
      },
      "type": "ObojoboDraft.Chunks.Table",
    }
  }
/>
`;

exports[`Table editor plugins.renderNode renders a caption when passed 1`] = `
<Memo(Caption)
  attributes={
    Object {
      "dummy": "dummyData",
    }
  }
  dummy="dummyData"
  node={
    Object {
      "data": Object {
        "get": [Function],
      },
      "type": "ObojoboDraft.Chunks.Table.Caption",
    }
  }
/>
`;

exports[`Table editor plugins.renderNode renders a cell when passed 1`] = `
<Cell
  attributes={
    Object {
      "dummy": "dummyData",
    }
  }
  dummy="dummyData"
  node={
    Object {
      "data": Object {
        "get": [Function],
      },
      "type": "ObojoboDraft.Chunks.Table.Cell",
    }
  }
/>
`;

exports[`Table editor plugins.renderNode renders a row when passed 1`] = `
<Memo(Row)
  attributes={
    Object {
      "dummy": "dummyData",
    }
  }
  dummy="dummyData"
  node={
    Object {
      "data": Object {
        "get": [Function],
      },
      "type": "ObojoboDraft.Chunks.Table.Row",
    }
  }
/>
`;

exports[`Table editor plugins.renderPlaceholder exits when not relevent 1`] = `undefined`;

exports[`Table editor plugins.renderPlaceholder exits when not relevent 2`] = `undefined`;

exports[`Table editor plugins.renderPlaceholder exits when not relevent 3`] = `undefined`;

exports[`Table editor plugins.renderPlaceholder renders a placeholder 1`] = `
<span
  className="placeholder align-center required"
  contentEditable={false}
  data-placeholder="Type Your Caption Here"
/>
`;
